force-app/main/default/objects/PPEProduct__c/PPEProduct__c.object-meta.xml
<CustomObject>
    <label>PPE Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPE Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>