force-app/main/default/objects/PPEProduct__c/fields/AvailableSizes__c.field-meta.xml
<CustomField>
    <fullName>AvailableSizes__c</fullName>
    <label>Available Sizes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>XS</fullName><default>false</default><label>XS</label></value>
            <value><fullName>S</fullName><default>false</default><label>S</label></value>
            <value><fullName>M</fullName><default>false</default><label>M</label></value>
            <value><fullName>L</fullName><default>false</default><label>L</label></value>
            <value><fullName>XL</fullName><default>false</default><label>XL</label></value>
            <value><fullName>XXL</fullName><default>false</default><label>XXL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>