force-app/main/default/objects/PPEProduct__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Clothing</fullName><default>false</default><label>Clothing</label></value>
            <value><fullName>Footwear</fullName><default>false</default><label>Footwear</label></value>
            <value><fullName>Head Protection</fullName><default>false</default><label>Head Protection</label></value>
            <value><fullName>Eye Protection</fullName><default>false</default><label>Eye Protection</label></value>
            <value><fullName>Hand Protection</fullName><default>false</default><label>Hand Protection</label></value>
            <value><fullName>Respiratory</fullName><default>false</default><label>Respiratory</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>