force-app/main/default/objects/PPEProduct__c/fields/InStock__c.field-meta.xml
<CustomField>
    <fullName>InStock__c</fullName>
    <label>In Stock</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>