force-app/main/default/objects/PPEProduct__c/fields/MIMEType__c.field-meta.xml
<CustomField>
    <fullName>MIMEType__c</fullName>
    <defaultValue>"image/jpeg"</defaultValue>
    <label>MIME Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>